--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 <section class="hero" id="home">
     <h2>Ajude o Miguel a enxergar o mundo com clareza!</h2>
-    <p>Compre números por R$ 10 e concorra a R$ 1.500. Todo o valor será usado para a cirurgia de estrabismo do Miguel!</p>
+    <p>Compre números por R$ 10 e concorra a R$ 1.500. Todo o valor será usado para a cirurgia de estrabismo do Miguel! Alguns números podem ter prêmios instantâneos!</p>
     <div class="progress-container">
         <div class="progress-bar" id="progress-bar">0% Arrecadado</div>
     </div>
