--- a/numero-premiado.html
+++ b/numero-premiado.html
@@ -135,9 +135,9 @@
         <input type="tel" id="check-phone" placeholder="Telefone usado na compra (ex.: 65984730000)" maxlength="11">
         <button id="check-button" onclick="checkNumber()">Consultar Número</button>
         <p id="check-result"></p>
-        <div class="winners-container" id="winners-container">
+        <div class="winners-container" id="winners-container" style="display: none;">
             <h3>Ganhadores Instantâneos</h3>
-            <div class="winner-item" id="winner-1"></div>
+            <div id="winners-list"></div>
         </div>
     </div>
 </section>
@@ -188,12 +188,67 @@
     }
 
     function launchConfetti() {
-        confetti({
-            particleCount: 100,
-            spread: 70,
-            origin: { y: 0.6 },
-            colors: ['#ff0000', '#00ff00', '#0000ff', '#ffff00']
-        });
+        if (typeof confetti === 'undefined') {
+            console.error('Biblioteca canvas-confetti não carregada. Verifique o CDN ou a conexão de rede.');
+            alert('Não foi possível carregar a animação de confetes. Tente novamente mais tarde.');
+            return;
+        }
+        console.log('Acionando confetes infinitos...');
+        let burstCount = 0;
+        setInterval(() => {
+            confetti({
+                particleCount: 100 + (burstCount % 3) * 20,
+                spread: 70 + (burstCount % 3) * 10,
+                origin: { y: 0.5 + (burstCount % 3) * 0.1 },
+                colors: ['#ff0000', '#00ff00', '#0000ff', '#ffff00', '#ff69b4'],
+                angle: 90,
+                drift: burstCount % 2 === 0 ? 0.5 : -0.5,
+                zIndex: 9999
+            });
+            burstCount++;
+            console.log(`Burst de confetes #${burstCount}`);
+        }, 1000); // Intervalo de 1 segundo
+    }
+
+    async function loadWinners() {
+        try {
+            console.log('Carregando ganhadores...');
+            const response = await fetch('https://rifa-miguel.onrender.com/get_winners', {
+                method: 'GET',
+                headers: { 'Content-Type': 'application/json' }
+            });
+            if (!response.ok) throw new Error(`Erro ao carregar ganhadores: ${response.status}`);
+            const winners = await response.json();
+            const winnersList = document.getElementById('winners-list');
+            winnersList.innerHTML = '';
+            winners.forEach((winner, index) => {
+                const winnerDiv = document.createElement('div');
+                winnerDiv.className = 'winner-item';
+                winnerDiv.id = `winner-${index + 1}`;
+                winnerDiv.textContent = `${winner.name || 'Anônimo'} - Número: ${winner.number} - Telefone: ${winner.phone} - Prêmio: ${winner.prize}`;
+                winnersList.appendChild(winnerDiv);
+            });
+            document.getElementById('winners-container').style.display = winners.length > 0 ? 'block' : 'none';
+            console.log(`Ganhadores carregados: ${winners.length}`);
+        } catch (error) {
+            console.error('Erro ao carregar ganhadores:', error.message);
+        }
+    }
+
+    async function saveWinner(winner) {
+        try {
+            console.log('Salvando ganhador:', winner);
+            const response = await fetch('https://rifa-miguel.onrender.com/save_winner', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(winner)
+            });
+            if (!response.ok) throw new Error(`Erro ao salvar ganhador: ${response.status}`);
+            console.log('Ganhador salvo com sucesso');
+            await loadWinners(); // Atualiza a lista após salvar
+        } catch (error) {
+            console.error('Erro ao salvar ganhador:', error.message);
+        }
     }
 
     async function checkNumber() {
@@ -202,7 +257,6 @@
         const phoneInput = document.getElementById('check-phone').value.trim();
         const resultDiv = document.getElementById('check-result');
         const winnersContainer = document.getElementById('winners-container');
-        const winnerItem = document.getElementById('winner-1');
 
         checkButton.disabled = true;
         resultDiv.classList.add('loading');
@@ -229,7 +283,7 @@
 
             const purchasedNumbers = numbers.filter(num => !availableNumbers.includes(num));
             if (purchasedNumbers.length === 0) {
-                resultDiv.innerHTML = `Nenhum dos números informados (${numbers.join(', ')}) foi comprado. Deseja comprá-los por R$ 10 cada? <a href="https://ederamorimth.github.io/rifa-miguel/index.html">Clique aqui para comprar</a>.`;
+                resultDiv.innerHTML = `Nenhum dos números informados (Exemplo ${numbers.join(', ')}) foi comprado. Deseja comprá-los por R$ 20 cada? <a href="https://ederamorimth.github.io/rifa-miguel/index.html">Clique aqui para comprar</a>.`;
                 checkButton.disabled = false;
                 resultDiv.classList.remove('loading');
                 return;
@@ -244,7 +298,6 @@
             const purchaseData = await purchaseRes.json();
 
             if (purchaseData.owned) {
-                // Buscar números premiados do backend
                 const winningNumbersRes = await fetch('https://rifa-miguel.onrender.com/winning_numbers');
                 if (!winningNumbersRes.ok) throw new Error(`Erro ao carregar números premiados: ${winningNumbersRes.status}`);
                 const winningPrizes = await winningNumbersRes.json();
@@ -252,28 +305,34 @@
                 let message = '';
                 let hasWinningNumber = false;
 
-                purchasedNumbers.forEach(num => {
+                for (const num of purchasedNumbers) {
                     const winningPrize = winningPrizes.find(prize => prize.number === num);
                     if (winningPrize) {
                         message += `Parabéns! O número ${num} é um prêmio instantâneo! Você ganhou ${winningPrize.prize}! 🎉<br>`;
                         hasWinningNumber = true;
-                        winnerItem.textContent = `${purchaseData.buyerName || 'Anônimo'} - Número: ${num} - Telefone: ${maskPhone(phone)} - Prêmio: ${winningPrize.prize}`;
+                        const winner = {
+                            name: purchaseData.buyerName,
+                            number: num,
+                            phone: maskPhone(phone),
+                            prize: winningPrize.prize
+                        };
+                        await saveWinner(winner);
                     } else {
                         message += `O número ${num} foi comprado por você e participa do sorteio principal, mas não é um prêmio instantâneo.<br>`;
                     }
-                });
+                }
                 resultDiv.innerHTML = message || 'Nenhum prêmio instantâneo encontrado para seus números. Você ainda participa do sorteio principal!';
 
                 if (hasWinningNumber) {
                     winnersContainer.style.display = 'block';
-                    launchConfetti(); // Dispara o efeito de confetes
+                    launchConfetti();
                 }
             } else {
                 resultDiv.textContent = 'Os números informados não correspondem ao telefone fornecido. Verifique seus dados.';
                 winnersContainer.style.display = 'none';
             }
         } catch (error) {
-            console.error('Erro ao consultar número:', error);
+            console.error('Erro ao consultar número:', error.message);
             resultDiv.textContent = `Erro ao verificar os números. Tente novamente ou contate o suporte. Detalhe: ${error.message}`;
             winnersContainer.style.display = 'none';
         } finally {
@@ -281,6 +340,9 @@
             resultDiv.classList.remove('loading');
         }
     }
+
+    // Carrega os ganhadores ao iniciar a página
+    window.onload = loadWinners;
 </script>
 
 </body>
