--- a/index.html
+++ b/index.html
@@ -97,11 +97,25 @@
             cursor: pointer;
             width: 100%;
         }
+        .form-container p.info {
+            color: #d32f2f;
+            font-weight: bold;
+            margin: 10px 0;
+        }
         footer {
             background-color: #333;
             color: white;
             text-align: center;
             padding: 10px;
+        }
+        footer a {
+            color: #ffc107;
+            font-weight: bold;
+            font-size: 1.1em;
+            text-decoration: none;
+        }
+        footer a:hover {
+            color: #ffca28;
         }
         .share-button {
             background-color: #25d366;
@@ -132,17 +146,15 @@
     <nav>
         <a href="/rifa-miguel/index.html">Início</a>
         <a href="/rifa-miguel/como-funciona.html">Como Funciona</a>
-        <a href="/rifa-miguel/sobre-estrabismo.html">Sobre o Estrabismo</a>
+        <a href="/rifa-miguel/sobre-estrabismo.html">Estrabismo</a>
         <a href="/rifa-miguel/orcamento.html">Orçamento</a>
         <a href="/rifa-miguel/numero-premiado.html">Número Premiado</a>
-        <a href="javascript:void(0)" onclick="checkPassword()">Sorteio</a>
-        <a href="#contato">Contato</a>
     </nav>
 </header>
 
 <section class="hero" id="home">
     <h2>Ajude o Miguel a enxergar o mundo com clareza!</h2>
-    <p>Compre números por R$ 10 e concorra a R$ 1.500. Todo o valor será usado para a cirurgia de estrabismo do Miguel! Alguns números podem ter prêmios instantâneos!</p>
+    <p>Compre números por R$ 20 e concorra a R$ 1.500. Todo o valor será usado para a cirurgia de estrabismo do Miguel! Alguns números podem ter prêmios instantâneos!</p>
     <div class="progress-container">
         <div class="progress-bar" id="progress-bar">0% Arrecadado</div>
     </div>
@@ -163,6 +175,7 @@
         <input type="tel" id="buyer-phone" placeholder="Telefone (WhatsApp)" required>
         <p>Números selecionados: <span id="selected-numbers">Nenhum</span></p>
         <p>Total: R$ <span id="total-price">0</span></p>
+        <p class="info">Após o pagamento, volte aqui para verificar se seu número é premiado com um prêmio instantâneo!</p>
         <button type="submit">Pagar com Pix/Cartão</button>
     </form>
 </section>
@@ -181,37 +194,9 @@
         document.getElementById('numbers').scrollIntoView({ behavior: 'smooth' });
     }
 
-    async function checkPassword() {
-        const password = prompt("Digite a senha para acessar a página de sorteio:");
-        if (!password) {
-            alert("Por favor, digite uma senha.");
-            return;
-        }
-
-        try {
-            const response = await fetch('https://rifa-miguel.onrender.com/verify_password', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ password })
-            });
-
-            if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
-            const result = await response.json();
-
-            if (result.valid) {
-                window.location.href = "/rifa-miguel/sorteio.html";
-            } else {
-                alert("Senha incorreta!");
-            }
-        } catch (error) {
-            console.error('Erro ao verificar senha:', error);
-            alert('Erro ao conectar ao servidor. Tente novamente.');
-        }
-    }
-
     const numberContainer = document.getElementById('numbers');
     let selectedNumbers = [];
-    const pricePerNumber = 10;
+    const pricePerNumber = 20;
 
     // Carregar dados salvos no localStorage
     window.onload = function() {
@@ -270,7 +255,7 @@
                 const availableNumbers = await availableRes.json();
 
                 numberContainer.innerHTML = '';
-                for (let i = 1; i <= 1700; i++) {
+                for (let i = 1; i <= 900; i++) {
                     const num = String(i).padStart(4, '0');
                     const numDiv = document.createElement('div');
                     numDiv.classList.add('number');
@@ -316,13 +301,13 @@
                 if (retries === maxRetries) {
                     console.warn('Máximo de tentativas atingido, usando fallback...');
                     numberContainer.innerHTML = '';
-                    for (let i = 1; i <= 1700; i++) {
+                    for (let i = 1; i <= 900; i++) {
                         const num = String(i).padStart(4, '0');
                         const numDiv = document.createElement('div');
                         numDiv.classList.add('number');
                         numDiv.textContent = num;
                         numDiv.addEventListener('click', () => {
-                            numDiv.classList.toggle('selected');
+                            numDiv.classList.toggle Toggle('selected');
                             if (numDiv.classList.contains('selected')) {
                                 selectedNumbers.push(num);
                             } else {
@@ -370,7 +355,6 @@
                 console.log('Resposta da API:', responseData);
 
                 if (responseData.init_point) {
-                    // Apenas redireciona para o init_point sem adicionar parâmetros
                     window.location.href = responseData.init_point;
                 } else {
                     alert(responseData.error || 'Erro ao criar o pagamento. Tente novamente.');
@@ -409,7 +393,6 @@
             return;
         }
 
-        // Salvar dados no localStorage
         localStorage.setItem('buyerName', buyerName);
         localStorage.setItem('buyerPhone', buyerPhone);
 
