--- a/index.html
+++ b/index.html
@@ -102,6 +102,17 @@
             font-weight: bold;
             margin: 10px 0;
         }
+        .form-container a.check-winner {
+            display: inline-block;
+            color: #007bff;
+            font-weight: bold;
+            text-decoration: none;
+            margin: 10px 0;
+            transition: color 0.3s;
+        }
+        .form-container a.check-winner:hover {
+            color: #0056b3;
+        }
         footer {
             background-color: #333;
             color: white;
@@ -176,6 +187,7 @@
         <p>Números selecionados: <span id="selected-numbers">Nenhum</span></p>
         <p>Total: R$ <span id="total-price">0</span></p>
         <p class="info">Após o pagamento, volte aqui para verificar se seu número é premiado com um prêmio instantâneo!</p>
+        <a href="/rifa-miguel/numero-premiado.html" class="check-winner">Verificar se meu número é premiado</a>
         <button type="submit">Pagar com Pix/Cartão</button>
     </form>
 </section>
@@ -204,7 +216,7 @@
         const savedPhone = localStorage.getItem('buyerPhone');
         if (savedName) document.getElementById('buyer-name').value = savedName;
         if (savedPhone) document.getElementById('buyer-phone').value = savedPhone;
-        loadData(); // Chama loadData ao carregar a página
+        loadData();
     };
 
     async function selectRandomNumbers() {
