--- a/numero-premiado.html
+++ b/numero-premiado.html
@@ -11,6 +11,7 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
+            overflow-x: hidden; /* Evitar overflow horizontal dos confetes */
         }
         header {
             background-color: #007bff;
@@ -34,6 +35,33 @@
             text-align: center;
             padding: 20px;
             background-color: white;
+            position: relative;
+            overflow: hidden;
+        }
+        /* Efeito de confetes */
+        .confetti {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background: #f00;
+            opacity: 0.8;
+            animation: fall linear infinite;
+        }
+        .confetti:nth-child(2n) {
+            background: #0f0;
+        }
+        .confetti:nth-child(3n) {
+            background: #00f;
+        }
+        .confetti:nth-child(4n) {
+            background: #ff0;
+        }
+        .confetti:nth-child(5n) {
+            background: #f0f;
+        }
+        @keyframes fall {
+            0% { transform: translateY(-10vh); opacity: 1; }
+            100% { transform: translateY(100vh); opacity: 0; }
         }
         .form-container {
             max-width: 400px;
@@ -104,6 +132,15 @@
             color: #007bff;
             font-style: italic;
         }
+        /* Adicionar confetes dinamicamente */
+        #confetti-container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            top: 0;
+            left: 0;
+        }
     </style>
 </head>
 <body>
@@ -124,6 +161,7 @@
 <section class="hero">
     <h2>Verifique seus Números Premiados!</h2>
     <p>Confira se os números que você comprou têm prêmios instantâneos ou participam do sorteio principal. Insira seus dados abaixo.</p>
+    <div id="confetti-container"></div>
 </section>
 
 <section class="form-container">
@@ -136,7 +174,7 @@
         <p id="check-result"></p>
         <div class="winners-container" id="winners-container">
             <h3>Ganhadores Instantâneos</h3>
-            <div class="winner-item" id="winner-1"></div>
+            <div id="winners-list"></div>
         </div>
     </div>
 </section>
@@ -186,13 +224,49 @@
         return phone;
     }
 
+    function createConfetti() {
+        const confettiContainer = document.getElementById('confetti-container');
+        confettiContainer.innerHTML = '';
+        for (let i = 0; i < 50; i++) {
+            const confetti = document.createElement('div');
+            confetti.className = 'confetti';
+            confetti.style.left = Math.random() * 100 + 'vw';
+            confetti.style.animationDuration = Math.random() * 2 + 3 + 's'; // 3-5 segundos
+            confetti.style.background = `hsl(${Math.random() * 360}, 100%, 50%)`; // Cores aleatórias
+            confettiContainer.appendChild(confetti);
+        }
+        setTimeout(() => confettiContainer.innerHTML = '', 5000); // Remove após 5 segundos
+    }
+
+    async function loadWinners() {
+        const winnersList = document.getElementById('winners-list');
+        try {
+            const response = await fetch('https://rifa-miguel.onrender.com/get_winners');
+            if (!response.ok) throw new Error(`Erro ao carregar ganhadores: ${response.status}`);
+            const winners = await response.json();
+
+            if (winners.length > 0) {
+                let html = '';
+                winners.forEach(winner => {
+                    const instaLink = winner.instagram ? `<a href="https://instagram.com/${winner.instagram.replace('@', '')}" target="_blank">@${winner.instagram}</a>` : '';
+                    html += `<div class="winner-item">${winner.name} - Número: ${winner.number} - Telefone: ${maskPhone(winner.phone)} - Prêmio: ${winner.prize} ${instaLink}</div>`;
+                });
+                winnersList.innerHTML = html;
+            } else {
+                winnersList.innerHTML = '<div class="winner-item">Nenhum ganhador instantâneo registrado ainda.</div>';
+            }
+        } catch (error) {
+            console.error('Erro ao carregar ganhadores:', error);
+            winnersList.innerHTML = '<div class="winner-item">Erro ao carregar ganhadores. Tente novamente.</div>';
+        }
+    }
+
     async function checkNumber() {
         const checkButton = document.getElementById('check-button');
         const numbersInput = document.getElementById('check-numbers').value.trim();
         const phoneInput = document.getElementById('check-phone').value.trim();
         const resultDiv = document.getElementById('check-result');
         const winnersContainer = document.getElementById('winners-container');
-        const winnerItem = document.getElementById('winner-1');
 
         checkButton.disabled = true;
         resultDiv.classList.add('loading');
@@ -248,7 +322,7 @@
                         const instaLink = instagram ? `<a href="https://instagram.com/${instagram.replace('@', '')}" target="_blank">@${instagram}</a>` : '';
                         message += `Parabéns! O número ${winningNum} é um prêmio instantâneo! Você ganhou ${prize}! ${instaLink}<br>`;
                         hasWinningNumber = true;
-                        winnerItem.innerHTML = `${purchaseData.buyerName || 'Anônimo'} - Número: ${winningNum} - Telefone: ${maskPhone(phone)} - Prêmio: ${prize} ${instaLink}`;
+                        createConfetti(); // Adicionar confetes ao ganhar
                     } else {
                         message += `O número ${num} foi comprado por você e participa do sorteio principal, mas não é um prêmio instantâneo.<br>`;
                     }
@@ -271,6 +345,9 @@
             resultDiv.classList.remove('loading');
         }
     }
+
+    // Carregar ganhadores ao iniciar a página
+    window.onload = loadWinners;
 </script>
 
 </body>
